# mgr

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README.org  build.sh
Common/: CommonDef.h
Scripts/: build.py  com.py
config/: camconf.json  camera_config.json
docs/html/: _application_8cpp.html  _application_8cpp__incl.dot  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application_8cpp_source.html  _application_8h.html  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _c_l_i_8cpp.html  _c_l_i_8cpp__incl.map  _c_l_i_8cpp__incl.md5  _c_l_i_8cpp_source.html  _c_l_i_8h.html  _c_l_i_8h__dep__incl.map  _c_l_i_8h__dep__incl.md5  _c_l_i_8h__incl.map  _c_l_i_8h__incl.md5  _c_l_i_8h_source.html  _c_s_socket_8cpp.html  _c_s_socket_8cpp__incl.dot  _c_s_socket_8cpp__incl.map  _c_s_socket_8cpp__incl.md5  _c_s_socket_8cpp_source.html  _c_s_socket_8h.html  _c_s_socket_8h__dep__incl.dot  _c_s_socket_8h__dep__incl.map  _c_s_socket_8h__dep__incl.md5  _c_s_socket_8h__incl.dot  _c_s_socket_8h__incl.map  _c_s_socket_8h__incl.md5  _c_s_socket_8h_source.html  _cam_crew_station_8h.html  _cam_crew_station_8h__dep__incl.map  _cam_crew_station_8h__dep__incl.md5  _cam_crew_station_8h__incl.map  _cam_crew_station_8h__incl.md5  _cam_crew_station_8h_source.html  (+267 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  (+65 more)
logo/: picelogo_64x64
mgrctl/: CMakeLists.txt
mgrctl/src/: main.cpp
mgrd/: CMakeLists.txt
mgrd/src/: Application.cpp  Application.h  main.cpp
mgrd/src/CLI/: CLI.cpp  CLI.h
mgrd/src/Camera/: Camera.h
mgrd/src/Net/: CSSocket.h
mgrd/src/Utils/: Utils.cpp  Utils.h
pciemgr/: CMakeLists.txt
pciemgr/infra/: pciemgrd.service
pciemgr/src/: main.cpp
pciemgr/src/Core/: Application.cpp  Application.h  Error.cpp  Error.h  Result.h
pciemgr/src/Endpoint/: Endpoint.cpp  Endpoint.h
pciemgr/src/Net/: CSSocket.h  NetPacket.cpp  NetPacket.h
pciemgr/src/Utils/: Utils.cpp  Utils.h
pciemgrd/: CMakeLists.txt
pciemgrd/infra/: pciemgrd.service
pciemgrd/src/: main.cpp
pciemgrd/src/CLI/: CLI.cpp  CLI.h
pciemgrd/src/Camera/: CamCrewStation.h
pciemgrd/src/Core/: Application.cpp  Application.h  Error.cpp  Error.h  Result.h
pciemgrd/src/Endpoint/: Endpoint.cpp  Endpoint.h
pciemgrd/src/Net/: CSSocket.cpp  NetHandler.cpp  NetHandler.h  NetPacket.cpp  NetPacket.h
pciemgrd/src/Utils/: Utils.cpp  Utils.h
